hphp/hack/test/typecheck/constraints/generic_function_constraint_lambda.php.like_types.exp
File "generic_function_constraint_lambda.php", line 9, characters 23-25:
You are trying to access the member bar but this is not an object, it is a dynamic value or an object of type I (Typing[4062])
File "generic_function_constraint_lambda.php", line 8, characters 19-19:
Definition is here
File "generic_function_constraint_lambda.php", line 10, characters 19-21:
You are trying to access the member bar but this is not an object, it is a dynamic value or an object of type I (Typing[4062])
File "generic_function_constraint_lambda.php", line 8, characters 19-19:
Definition is here
